# callwhisper-web

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyinstaller_entrypoint.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: security.yml  test.yml
config/: config.json
docs/: ACCESSIBILITY.md  API.md  ARCHITECTURE.md  BUILDING.md  CONFIGURATION.md  DEPLOYMENT.md  DEVELOPMENT.md  IT_DEPLOYMENT.md  SERVICES.md  VPAT.md
installer/: CallWhisper.wxs
scripts/: build-msi.ps1  build.ps1  ci-local.sh  dev_run.ps1  dev_run.sh  download-vendor.ps1  test_transcribe.py
src/callwhisper/: __init__.py  __main__.py  main.py
src/callwhisper/api/: routes.py  websocket.py
src/callwhisper/core/: bulkhead.py  cache.py  config.py  (+18 more)
static/: index.html
static/css/: styles.css
static/js/: app.js  autosave.js  cache.js  keyboard.js  setup-wizard.js  startup-check.js  state-machine.js  ui.js  websocket.js
test_audio/: test_merge.srt
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_api.py  test_checkpoint_atomicity.py  test_concurrency_safety.py  test_device_guard_comprehensive.py  test_export_and_downloads.py  test_fault_injection.py  test_input_validation_comprehensive.py  test_job_recovery_advanced.py  test_large_files.py  test_process_failures_advanced.py  test_queue_management.py  test_recording_lifecycle_e2e.py  test_resource_exhaustion_advanced.py  test_signal_handling.py  test_transcription_pipeline.py  test_websocket_realtime.py
tests/unit/: __init__.py  test_exceptions.py  test_metrics.py  test_state_machine.py
(+51 files in other folders)
